# AAA

./: 0004.a.cpp  0136.a.cpp  0136B  0158.a.cpp  0263.a.cpp  0276.a.cpp  0485.a.cpp  0579.a.cpp  0617.a.cpp  0879.b.cpp  0886.b.cpp  0915.a.cpp  0935b.cpp  0967.b.cpp  0978.b.cpp  1017.a.cpp  1057a.cpp  1220.a.cpp  1330.a.cpp  1352.a.cpp  136.a.cpp  136b.cpp  1404.a.cpp  1501A  1512b.cpp  1512c.cpp  1559a.cpp  1585a.cpp  1649.a.cpp  1649A.cpp  1669.d.cpp  1670b.cpp  1671a.cpp  1675.c.cpp  1678a.cpp  1680b.cpp  1690.d.cpp  1692c.cpp  1699b.cpp  1701.a.cpp  (+45 more)
KatyaSim/: .gitignore  CMakeLists.txt  ImFileBrowser.h  KatyaSim.cpp  vcpkg.json
KatyaSim/my_sources/: application.cpp  application.h  main.cpp  pch.h
KatyaSim/my_sources/elems/: input.h  light.h  mesh.h  vertex_holder.cpp  vertex_holder.h
KatyaSim/my_sources/mesh_import/: import_base.h
KatyaSim/my_sources/render/: opengl_buffer_manager.h  opengl_context.cpp  render_base.h  ui_context.cpp  ui_context.h
KatyaSim/my_sources/shader/: shader_util.cpp  shader_util.h
KatyaSim/my_sources/ui/: property_panel.cpp  property_panel.h  scene_view.cpp  scene_view.h
KatyaSim/my_sources/utils/: imgui_widgets.h  str_utils.h
KatyaSim/my_sources/window/: jgl_window.cpp  jgl_window.h
KatyaSim/shaders/: vs.shader
k/: CMakeLists.txt  vcpkg.json
k/imgui/: imgui.cpp
k/my_sources/: main.cpp  morph.cpp  morph.h
kat/: KatyaSim.cpp  KatyaSim.h
kat/imgui/: ImFileBrowser.h  imgui_widgets.cpp
kat/my_sources/: main.cpp
kat/my_sources/elems/: camera.h  element.cpp  element.h  face.cpp  mesh.cpp
kat/my_sources/mesh_import/: import_obj.cpp  import_obj.h
kat/my_sources/render/: opengl_buffer_manager.cpp  opengl_context.h  ui_context.cpp
kat/my_sources/shader/: shader_util.cpp
kat/my_sources/ui/: property_panel.h  scene_view.h
kat/my_sources/window/: window.h
kat/shaders/: fs.shader  fs_pbr.shader
